Created Update API for externalURL and validation 1.